--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Lovers+Quarrel" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <nav>
-      </nav>
-    </header>
-    <main>
-      <h1>Portfolio</h1>
-    </main>
-    <footer>
-    </footer>
-    <script src="app.js" charset="utf-8"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Lovers+Quarrel" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bilbo" rel="stylesheet">
+</head>
+<body>
+  <header>
+    <h1>
+      <div class="slidingHorizontal">
+        <span>LOUIS</span>
+        <span>WARREN</span>
+        <span>HAYWOOD</span>
+      </div>
+    </h1>
+    <h2>Portfolio</h2>
+    <nav>
+    </nav>
+  </header>
+  <main>
+
+  </main>
+  <footer>
+  </footer>
+  <script src="app.js" charset="utf-8"></script>
+</body>
 </html>
