--- a/index.html
+++ b/index.html
@@ -4,59 +4,101 @@
   <meta charset="utf-8">
   <title>Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="style.css"/>
   <link rel="stylesheet" href="vendor/styles/normalize.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/icons.css">
   <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/modules.css">
+  <link rel="stylesheet" href="styles/linkedin.css">
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
+  <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Lovers+Quarrel" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bilbo" rel="stylesheet">
+  <script id="topic-template" type="text/x-handlebars-template">
+      <article class="clearfix" data-category="{{category}}">
+        <header>
+          <!-- <h1>{{jobTitle}}</h1> -->
+          <div class="byline">
+            By <address><a href="{{category}}">{{category}}</a></address>
+          </div>
+        </header>
+        <section class="topic-body">{{{body}}}</section>
+        <a href="#" class="read-on">Read On &rarr;</a>
+    </article>
+  </script>
 </head>
 <body>
   <header>
     <nav class="nav">
+      <div class="menu">
+        <span class="menu-global menu-top"></span>
+        <span class="menu-global menu-middle"></span>
+        <span class="menu-global menu-bottom"></span>
+      </div>
       <ul class="navigation">
         <li class="tab" data-content="topics"><a href="#" class="icon-home"> Home</a></li>
         <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
-        <li><a href="https://www.linkedin.com/in/louiswhaywood/" target="_blank" class="icon-twitter3"> Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/louiswhaywood/" target="_blank" class="icon-linkedin-square"> LinkedIn</a></li>
         <li><a href="https://github.com/Redhatfour1" target="_blank" class="icon-github"> GitHub</a></li>
       </ul>
     </nav>
     <div class="video-container">
-      <video preload="true" autoplay loop muted poster="assets/videoposter.jpeg" class="video-background">
+      <video preload="true" autoplay loop muted class="video-background">
         <source src="assets/clouds.mp4" type="video/mp4" media="(orientation:landscape)">
         </video>
-    </div>
-    <h1>
-      <div class="slidingHorizontal">
-        <span>LOUIS</span>
-        <span>WARREN</span>
-        <span>HAYWOOD</span>
       </div>
-    </h1>
-    <h2>Portfolio</h2>
-  </header>
-  <main>
-    <section id="articles">
-      <article class="template" data-category="cat">
-          <div class="byline">
-
-          </div>
-        <section class="article-body"></section>
-      </article>
+      <h1 class="my-name">
+        <div class="slidingHorizontal">
+          <span>LOUIS</span>
+          <span>WARREN</span>
+          <span>HAYWOOD</span>
+        </div>
+      </h1>
+      <h2>Portfolio</h2>
+    </header>
+    <main>
+      <section id="topics" class="tab-content">
+        <div>
+          <ul id="filters">
+            <li>
+              <select id="category-filter">
+                <option value="">-- Filter by Categories --</option>
+              </select>
+            </li>
+            <li>
+              <!-- <select id="category-filter">
+                <option value="">-- Filter by Categories --</option>
+              </select> -->
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="about" class="tab-content">
+        <header>
+          Welcome to my Blog
+        </header>
+      <section>
+        <h1>Some of my intrests:</h1>
+        <ul>
+          <li>Coding</li>
+          <li>Learing new things</li>
+          <li>Hanging with my family</li>
+        </ul>
+      </section>
     </section>
 
 
-  </main>
-  <footer>
-    &copy; 2017 Code Fellows | Blog | Louis W. Haywood
-  </footer>
-  <script src="scripts/jquery-3.2.0.js"></script>
-  <script src="scripts/data.js"></script>
-  <script src="app.js" charset="utf-8"></script>
-</body>
-</html>
+    </main>
+    <footer>
+      &copy; 2017 Code Fellows | Blog | Louis W. Haywood
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+    <script src="scripts/blogData.js"></script>
+    <script src="scripts/hamburger.js"></script>
+    <script src="scripts/app.js" charset="utf-8"></script>
+    <script src="scripts/blogView.js"></script>
+  </body>
+  </html>
