--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bilbo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Akronim" rel="stylesheet">
   <script id="template" type="text/x-handlebars-template">
     <article class="blog-box" data-category="{{myCategory}}">
 
@@ -44,7 +45,7 @@
       </div>
       <ul class="navigation">
         <li class="tab" data-content="topics"><a href="#" class="icon-home"> Home</a></li>
-        <li class="tab" data-content="aboutMe"><a href="#" class="icon-address-book"> About</a></li>
+        <li class="tab" id="removeImg" data-content="aboutMe"><a href="#" class="icon-address-book"> About</a></li>
         <li><a href="https://www.linkedin.com/in/louiswhaywood/" target="_blank" class="icon-linkedin-square"> LinkedIn</a></li>
         <li><a href="https://github.com/Redhatfour1" target="_blank" class="icon-github"> GitHub</a></li>
       </ul>
@@ -69,7 +70,7 @@
           <section id="aboutMe" class="tab-content">
             <ul id="filters">
               <li>
-                <select id="category-filter">
+                <select id="category-filter" class="styled-select blue semi-square">
                   <option value="">-- MY Blog Categories --</option>
                 </select>
               </li>
