working on css and organizing css files

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </select>
               </li>
             </ul>
-            <h1 id="titleCategory" class="titleCategory">Category</h1>
+            <h1 background-image="assets/abstract.jpg" id="titleCategory" class="titleCategory">Category</h1>
             <section id="homePage"></section>
           </div>
           <section id="topics" class="tab-content">
