--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <span class="menu-global menu-bottom"></span>
       </div>
       <ul class="navigation">
-        <li class="tab" id="addImg" data-content="topics"><a href="#" class="icon-home"> Home</a></li>
-        <li class="tab" id="removeImg" data-content="aboutMe"><a href="#" class="icon-address-book"> About</a></li>
-        <li><a href="https://www.linkedin.com/in/louiswhaywood/" target="_blank" class="icon-linkedin-square"> LinkedIn</a></li>
-        <li><a href="https://github.com/Redhatfour1" target="_blank" class="icon-github"> GitHub</a></li>
+        <li class="tab" id="addImg" data-content="topics"><a href="#" class="icon icon-home"></a><a href="#" class="navi">Home</a></li>
+        <li class="tab" id="removeImg" data-content="aboutMe"><a href="#" class="icon icon-address-book"></a><a href="#" class="navi">About</a></li>
+        <li><a href="https://www.linkedin.com/in/louiswhaywood/" target="_blank" class="icon icon-linkedin-square"></a><a href="#" class="navi">LinkedIn</a></li>
+        <li><a href="https://github.com/Redhatfour1" target="_blank" class="icon icon-github"></a><a href="#" class="navi">GitHub</a></li>
       </ul>
     </nav>
     <div class="video-container">
