--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="vendor/styles/normalize.css">
+  <link rel="stylesheet" href="styles/mobile.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/icons.css">
   <link rel="stylesheet" href="styles/layout.css">
@@ -97,10 +98,15 @@
         &copy; 2017 Code Fellows | Blog | Louis W. Haywood
       </footer>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+      <script src="vendor/scripts/handlebars.js"></script>
+      <script src="vendor/scripts/marked.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
       <script src="scripts/blogData.js" charset="utf-8"></script>
       <script src="scripts/hamburger.js" charset="utf-8"></script>
       <script src="scripts/app.js" charset="utf-8"></script>
       <script src="scripts/blogView.js" charset="utf-8"></script>
+      <script>
+      Topic.fetchAll();
+      </script>
     </body>
     </html>
