working on adding json however something is broken

--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
   <link rel="stylesheet" href="styles/icons.css">
   <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/modules.css">
-  <link rel="stylesheet" href="https://i.icomoon.io/public/temp/c9dacd73bd/UntitledProject/style.css">
+  <!-- <link rel="stylesheet" href="https://i.icomoon.io/public/temp/c9dacd73bd/UntitledProject/style.css"> -->
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
   <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Lovers+Quarrel" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bilbo" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Akronim" rel="stylesheet">
   <script id="template" type="text/x-handlebars-template">
     <article class="blog-box" data-category="{{myCategory}}">
 
@@ -101,7 +98,6 @@
       <script src="vendor/scripts/handlebars.js"></script>
       <script src="vendor/scripts/marked.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
-      <script src="scripts/blogData.js" charset="utf-8"></script>
       <script src="scripts/hamburger.js" charset="utf-8"></script>
       <script src="scripts/app.js" charset="utf-8"></script>
       <script src="scripts/blogView.js" charset="utf-8"></script>
