finally got json working, css and filters are functional again

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <script src="scripts/blogView.js" charset="utf-8"></script>
       <script>
       Topic.fetchAll();
+      blogView.initIndexPage();
       </script>
     </body>
     </html>
