working on using the map and reduce methods

--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -29,6 +29,7 @@
       <p>{{hobby}}</p>
       <p>{{tvShows}}</p>
       {{publishStatus}}
+      <li>{{numOfWords}} Word Count</li>
 
     </article>
   </script>
@@ -92,6 +93,7 @@
         </div>
       </main>
       <footer class="foot">
+        <h6 class="words">Total number of words:</h6>
         &copy; 2017 Code Fellows | Blog | Louis W. Haywood
       </footer>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
