wrapped js files in IIFE. Used map and reduce methods

--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -76,8 +76,14 @@
             </ul>
             <h1 id="titleCategory" class="titleCategory">Category</h1>
             <section id="homePage"></section>
-            <h6 class="words">Total number of words:</h6>
+            <section>
+            <dt>Total number of words:</dt> <dd id="words"></dd>
+            </section>
           </div>
+          <!-- <section id="projectstodom" class="projectstodom"></section>
+      <section id="projectStats" >
+        <dt class="wordCount">Description Word Count:</dt><dd class="words wordCount"></dd>
+      </section> -->
           <section id="topics" class="tab-content">
             <header>
               <h1 class="welcome">Welcome to my Blog</h1>
@@ -104,7 +110,7 @@
       <script src="scripts/topic.js" charset="utf-8"></script>
       <script src="scripts/blogView.js" charset="utf-8"></script>
       <script>
-        window.Topic.fetchAll();
+        window.Topic.fetchAll(window.blogView.initIndexPage);
       </script>
     </body>
     </html>
